--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/chart.js": "^2.9.41",
     "@types/html2canvas": "^0.5.35",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "chart.js": "^4.3.0",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^5.8.3",
+    "react-icons": "^4.12.0",
+    "react-scripts": "^0.0.0",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
