--- a/package.json
+++ b/package.json
@@ -4,28 +4,22 @@
   "private": true,
   "homepage": "https://wenyichen.github.io/chart-creator-app",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "14.6.1",
     "@types/chart.js": "^2.9.41",
     "@types/html2canvas": "^0.5.35",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "chart.js": "^4.3.0",
     "html2canvas": "^1.4.1",
-    "react": "^18.2.0",
+    "react": "19.1.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^4.12.0",
-    "react-scripts": "^0.0.0",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "vitest",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -48,6 +42,16 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "gh-pages": "^6.3.0",
+    "jsdom": "^26.1.0",
+    "typescript": "^5.8.3",
+    "vite": "^7.0.4",
+    "vitest": "^3.2.4"
   }
 }
